plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id "io.sentry.jvm.gradle" version "5.12.0"
}

group = 'org.tuna.zoopzoop'
version = '0.0.1-SNAPSHOT'
description = 'backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    springAiVersion = "1.0.0"
}

test {
    useJUnitPlatform()
}

dependencies {
    // Spring Data JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Spring Oauth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Spring Web (MVC)
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // WebFlux (소셜 로그인을 위한 비동기 프레임워크)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Bean Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // QueryDSL JPA + APT (Jakarta)
    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"

    // APT가 jakarta 패키지 인식하도록 추가
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // Lombok (compile only)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Spring Boot DevTools (개발용)
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // H2 Database (runtime only)
    runtimeOnly 'com.h2database:h2'

    // Spring Boot Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // Spring Security Test
    testImplementation 'org.springframework.security:spring-security-test'

    // JUnit Platform Launcher (runtime only for test)
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // OpenAPI / Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Spring AI
    implementation ('org.springframework.ai:spring-ai-starter-model-openai'){
        exclude group: 'io.swagger.core.v3', module: 'swagger-annotations'
    }

    // 크롤링
    implementation("org.jsoup:jsoup:1.21.2")

    // Spring Boot Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Mysql driver
    implementation 'mysql:mysql-connector-java:8.0.33'

    // AWS SDK for S3
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.4.0'

    // Playwright for Java
    implementation 'com.microsoft.playwright:playwright:1.54.0'
    
    // Sentry (모니터링 용)
    implementation 'io.sentry:sentry-spring-boot-starter-jakarta:8.22.0'
    
    // Apache Commons Codec
    implementation"commons-codec:commons-codec:1.19.0"

    // Redis (Spring starter)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
}

dependencyManagement {
    imports {
        mavenBom("org.springframework.ai:spring-ai-bom:${property("springAiVersion")}")
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

sentry {
    // Generates a JVM (Java, Kotlin, etc.) source bundle and uploads your source code to Sentry.
    // This enables source context, allowing you to see your source
    // code as part of your stack traces in Sentry.
    includeSourceContext = true

    org = "whitedoggy"
    projectName = "zoopzoop-backend"
    authToken = System.getenv("SENTRY_AUTH_TOKEN")
}
